--- a/app/src/PassScanner/res/values/strings.xml
+++ b/app/src/PassScanner/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="app_name">Pass Scanner</string>
     <string name="flavor_name">passscanner</string>
+    <string name="phone_field">Phone number or scan QR Code</string>
+    <string name="scan">Scan</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
