missing strings added

--- a/app/src/PassIssuer/res/values/strings.xml
+++ b/app/src/PassIssuer/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Pass Issuer</string>
     <string name="flavor_name">passissuer</string>
+    <string name="title_activity_pass_issuer_list">VCIS Pass Issue</string>
 </resources>
