Added new and existing user fragments and modified the PassFormFragment
Signed-off-by: Goutham <gouthams0922@gmail.com>

--- a/app/src/PassIssuer/res/values/strings.xml
+++ b/app/src/PassIssuer/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="team">Team</string>
     <string name="member">Member</string>
     <string name="new_word">New</string>
+    <string name="button_1">Button 1</string>
+    <string name="button_2">Button 2</string>
 </resources>
